--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,14 @@ keywords = ['aiida', 'workflows']
 requires-python = '>=3.8'
 dependencies = [
     'aiida_core[atomic_tools]>=2.0',
+    'aiida-pseudo',
     'click~=8.0',
+    'h5py',
     'importlib_resources',
     'jsonschema',
     'numpy',
     'packaging'
+    'pymatgen',
 ]
 
 [project.urls]
