Add a test for a full silicon SCF workchain

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     'importlib_resources',
     'jsonschema',
     'numpy',
-    'packaging'
+    'packaging',
     'pymatgen',
 ]
 
