Add fail-fast: false to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
         strategy:
             matrix:
                 python-version: ['3.9', '3.10', '3.11', '3.12']
+            # Don't cancel other jobs if one of them fails
+            fail-fast: false
 
         services:
             postgres:
