--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ build-backend = 'flit_core.buildapi'
 name = 'aiida-dftk'
 dynamic = ['version']
 description = 'AiiDA plugin for DFTK'
-authors = [{name = 'Austin Zadoks', email = 'austin.zadoks@epfl.ch'}, {name = 'Yihan Wu', email = 'yihan.wu@epfl.ch'}, {name = 'Bruno Ploumhans', email = 'bruno.ploumhans@epfl.ch'}]
+authors = [{name = 'Bruno Ploumhans', email = 'bruno.ploumhans@epfl.ch'}, {name = 'Yihan Wu', email = 'yihan.wu@epfl.ch'}, {name = 'Austin Zadoks', email = 'austin.zadoks@epfl.ch'}]
 readme = 'README.md'
 license = {file = 'LICENSE'}
 classifiers = [
-    'Development Status :: 1 - Alpha',
+    'Development Status :: 3 - Alpha',
     'Framework :: AiiDA',
     'License :: OSI Approved :: MIT License',
     'Programming Language :: Python',
